12 Setting up Kubernetes on docker desktop/kub-ingress-docker-desktop-01-starting-setup/kubernetes/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: kubapp
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: sourishjana/demoimages:auth1
