12 Setting up Kubernetes on docker desktop/kub-ingress-docker-desktop-01-starting-setup/kubernetes/task-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
  namespace: kubapp
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
        - name: task
          image: sourishjana/demoimages:task3
