12 Setting up Kubernetes on docker desktop/kub-ingress-docker-desktop-01-starting-setup/kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: kubapp
spec:
  selector: 
    app: auth
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
