12 Setting up Kubernetes on docker desktop/kub-ingress-docker-desktop-01-starting-setup/kubernetes/task-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: kubapp
spec:
  selector: 
    app: task
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
