12 Setting up Kubernetes on docker desktop/kub-ingress-docker-desktop-01-starting-setup/kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: kubapp
spec:
  selector: 
    app: user
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
