12 Setting up Kubernetes on docker desktop/kub-ingress-docker-desktop-01-starting-setup/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: kubapp
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8090
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 80
